--- a/lemariku.html
+++ b/lemariku.html
@@ -71,7 +71,7 @@
   <aside id="mainSide" class="column">
     <div class="padded">
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; blockchain &mdash; <a href="/about">Learn more</a>.</h2>
+      <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; Bitcoin &mdash; <a href="/about">Learn more</a>.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
