fix: bitcoin not blockchain

--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
 <!-- META: seo -->
 
 <title>About | Peak Shift Ltd.</title>
-<meta name="description" content="We craft digital products built on web, mobile and blockchain.">
-<meta name="keywords" content="web, mobile, development, design, blockchain, marketing">
+<meta name="description" content="We craft digital products built on web, mobile and bitcoin.">
+<meta name="keywords" content="web, mobile, development, design, bitcoin, marketing">
 <meta name="author" content="Peak Shift Inc.">
 <meta name="company" content="Peak Shift">
 <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
@@ -29,14 +29,14 @@
 
 <meta property="og:url" content="http://www.peakshift.com/about" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Blockchain Product Design &amp; Development Studio" />
+<meta property="og:title" content="Bitcoin Product Design &amp; Development Studio" />
 <meta property="og:image" content="" />
 <meta property="og:site_name" content="Peak Shift Ltd." />
-<meta property="og:description" content="We craft digital products built on web, mobile and blockchain." />
+<meta property="og:description" content="We craft digital products built on web, mobile and bitcoin." />
 
 <meta name="twitter:card" content="photo" />
 <meta name="twitter:site" content="@peakshift" />
-<meta name="twitter:title" content="Blockchain Product Design &amp; Development Studio">
+<meta name="twitter:title" content="Bitcoin Product Design &amp; Development Studio">
 <meta name="twitter:image" content="">
 <meta name="twitter:image:width" content="1200" />
 <meta name="twitter:image:height" content="630" />
