--- a/design-sprints/index.html
+++ b/design-sprints/index.html
@@ -24,8 +24,8 @@
   <!-- META: seo -->
 
   <title>Peak Shift Ltd.</title>
-  <meta name="description" content="We craft digital products built on web, mobile and blockchain.">
-  <meta name="keywords" content="web, mobile, development, design, blockchain, marketing">
+  <meta name="description" content="We craft digital products built on web, mobile and bitcoin.">
+  <meta name="keywords" content="web, mobile, development, design, bitcoin, marketing">
   <meta name="author" content="Peak Shift Inc.">
   <meta name="company" content="Peak Shift">
   <meta name="copyright" content="Copyright (c) 2020 Peak Shift Inc.">
@@ -36,7 +36,7 @@
   <meta property="og:title" content="Peak Shift Ltd." />
   <meta property="og:image" content="" />
   <meta property="og:site_name" content="Peak Shift Ltd." />
-  <meta property="og:description" content="We craft digital products built on web, mobile and blockchain." />
+  <meta property="og:description" content="We craft digital products built on web, mobile and bitcoin." />
 
   <meta name="twitter:card" content="photo" />
   <meta name="twitter:site" content="@peakshift" />
@@ -72,7 +72,7 @@
   <aside id="mainSide" class="column">
     <div class="padded">
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; blockchain &mdash; <a href="/about">Learn more</a>.</h2>
+      <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; bitcoin &mdash; <a href="/about">Learn more</a>.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
