--- a/journal.html
+++ b/journal.html
@@ -105,7 +105,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                </figure>
 
                <p>Employers post their internships and job opportunities on the MindSky job board. MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document. Hiring managers log in, view, and sort applications as they come in.</p>
-               <blockquote>
+               <
+               quote>
                   <p>Having logical precise relevance to the matter at hand. See Synonyms at relevant.</p>
                   <cite>adjective</cite>
                </blockquote>
