feat: migrate to jekyll

--- a/index.html
+++ b/index.html
@@ -1,106 +1,6 @@
-
-<!DOCTYPE html>
-<!--[if lt IE 7 ]>
-<html lang="en" class="no-js ie6"> <![endif]-->
-<!--[if IE 7 ]>
-<html lang="en" class="no-js ie7"> <![endif]-->
-<!--[if IE 8 ]>
-<html lang="en" class="no-js ie8"> <![endif]-->
-<!--[if IE 9 ]>
-<html lang="en" class="no-js ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!-->
-<html lang="en" class="no-js"><!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-
-  <!--[if IE]><![endif]-->
-
-  <meta http-equiv="Expires" CONTENT="Tue, 01 Jan 2013 00:00:01 GMT">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-  <meta http-equiv="imagetoolbar" content="no">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-
-  <!-- META: seo -->
-
-  <title>Peak Shift Ltd.</title>
-  <meta name="description" content="We craft digital products built on web, mobile and bitcoin.">
-  <meta name="keywords" content="web, mobile, development, design, bitcoin, marketing">
-  <meta name="author" content="Peak Shift Inc.">
-  <meta name="company" content="Peak Shift">
-  <meta name="copyright" content="Copyright (c) 2020 Peak Shift Inc.">
-  <meta name="revisit-after" content="3 days">
-
-  <meta property="og:url" content="http://www.peakshift.com" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Bitcoin Product Design &amp; Development Studio" />
-  <meta property="og:image" content="" />
-  <meta property="og:site_name" content="Peak Shift Ltd." />
-  <meta property="og:description" content="We craft digital products built on web, mobile and bitcoin." />
-
-  <meta name="twitter:card" content="photo" />
-  <meta name="twitter:site" content="@peakshift" />
-  <meta name="twitter:title" content="Bitcoin Product Design &amp; Development Studio">
-  <meta name="twitter:image" content="">
-  <meta name="twitter:image:width" content="1200" />
-  <meta name="twitter:image:height" content="630" />
-
-  <!-- The Styles -->
-  <link href="/assets/css/master.css?v=0004" rel="stylesheet" type="text/css">
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6502879-7"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-6502879-7');
-  </script>
-  <!-- End Google Analytics -->
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-TPS5PB');</script>
-  <!-- End Google Tag Manager -->
-</head>
-<body class="">
-
-<div id="wrapper">
-  <aside id="mainSide" class="column">
-    <div class="padded">
-      <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-         <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; Bitcoin &mdash; <a href="/about">Learn more</a>.</h2>
-
-      <div class="contact-footer typeface-colour-secondary">
-        <hr>
-        <div class="columns">
-          <ul class="heading-typeface">
-            <li><span class="typeface-colour-white">›</span> PHONE: <a href="tel:+442032872811">+442032872811</a></li>
-            <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
-            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a>
-            </li>
-          </ul>
-          <p class="typeface-colour-secondary rs small">
-            <a href="//twitter.com/peakshift">
-              <img src="/assets/icons/twitter.svg" width="16" height="16">
-            </a>
-            <a href="//facebook.com/peakshift">
-              <img src="/assets/icons/facebook.svg" width="16" height="16">
-            </a>
-            <a href="//dribbble.com/peakshift">
-              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
-            </a>
-          </p>
-        </div>
-        <p class="typeface-colour-secondary rs small">
-          <small><em>All Rights Reserved. Copyright &copy; Peak Shift Ltd. 2012 - 2020</em></small>
-        </p>
-      </div>
-    </div>
-  </aside>
+---
+layout: default
+---
 
   <section id="mainContent" class="column">
     <figure class="active" style="background-image:url('/assets/content/mindsky/header-bg-light.png'); background-color: #F6F6F6;">
@@ -223,13 +123,3 @@
 
   </section>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="/assets/js/history.js"></script>
-  <script src="/assets/js/router.js"></script>
-  <script src="/assets/js/scripts.js?v0001"></script>
-  <!-- Google Tag Manager -->
-  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TPS5PB"
-  height="0" width="0" style="display:none; visibility:hidden; "></iframe></noscript>
-  <!-- End Google Tag Manager -->
-</body>
-</html>
