style: add animation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
   <section id="mainContent" class="column">
-    <figure class="active" style="background-image:url('/assets/content/mindsky/header-bg-light.png'); background-color: #F6F6F6;">
+    <figure class="contentHeaderImage" style="background-image:url('/assets/content/mindsky/header-bg-light.png'); background-color: #F6F6F6;">
       <a href="/mindsky"><div class="padded"><img class="fill" src="/assets/content/mindsky/header-details-2.png?v=03"></div></a>
     </figure>
     <div class="contentArea padded clearfix">
@@ -69,7 +69,7 @@ layout: default
   </section>
 
   <section id="mainContent" class="column">
-    <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
+    <figure class="contentHeaderImage" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
       <div class="padded"><img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1"></div>
     </figure>
     <div class="contentArea padded clearfix">
