style: make technology stack list look like pills

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: default
 
 
         <h4>Technology Stack</h4>
-        <ul>
+        <ul class="pills">
           <li>AWS Lambdas</li>
           <li>AWS EC2</li>
           <li>Docker</li>
@@ -107,7 +107,7 @@ layout: default
         </figure>
 
         <h4>Technology Stack</h4>
-        <ul>
+        <ul class="pills">
           <li>Node.js</li>
           <li>Web Sockets</li>
           <li>Phone Gap (iOS and Android)</li>
