feat (btc-payer): added privacy page

--- a/landing-page/btc-payer/privacy.html
+++ b/landing-page/btc-payer/privacy.html
@@ -1,5 +1,5 @@
 ---
-permalink: /btc-payer/
+permalink: /btc-payer/privacy-policy
 ---
 
 <!DOCTYPE html>
@@ -59,23 +59,43 @@ permalink: /btc-payer/
             alt="BTC Payer Logo"
           />
           <h1 class="text-gray-900 text-h3 font-bold-700 mt-32">
-            A mobile wallet powered by BTC Pay Server for you and your tribe
+            Privacy Policy
           </h1>
           <p class="text-h4 text-gray-900 font-bold-400 mt-16">
             Make Bitcoin payments with a shared custody account for you and your
             clan. Get your pupusas and do all your shopping with lightning fast
             bitcoin payments.
+            <br />
+            <br />
+            Make Bitcoin payments with a shared custody account for you and your
+            clan. Get your pupusas and do all your shopping with lightning fast
+            bitcoin payments.
+            <br />
+            <br />
+            Make Bitcoin payments with a shared custody account for you and your
+            clan. Get your pupusas and do all your shopping with lightning fast
+            bitcoin payments.
+            <br />
+            <br />
+            Make Bitcoin payments with a shared custody account for you and your
+            clan. Get your pupusas and do all your shopping with lightning fast
+            bitcoin payments.
+            <br />
+            <br />
+            Make Bitcoin payments with a shared custody account for you and your
+            clan. Get your pupusas and do all your shopping with lightning fast
+            bitcoin payments.
+            <br />
+            <br />
+            Make Bitcoin payments with a shared custody account for you and your
+            clan. Get your pupusas and do all your shopping with lightning fast
+            bitcoin payments.
+            <br />
+            <br />
+            Make Bitcoin payments with a shared custody account for you and your
+            clan. Get your pupusas and do all your shopping with lightning fast
+            bitcoin payments.
           </p>
-
-          <h3 class="text-h4 text-gray-900 font-bold-55 mt-32">
-            Stay up to date when we launch
-          </h3>
-          <form class="email-input mt-24">
-            <input type="text" name="email" placeholder="Your Email Address" />
-            <button>
-              <img src="/landing-page/btc-payer/assets/icons/send.svg" alt="" />
-            </button>
-          </form>
           <footer class="text-body4 text-gray-600 mt-32">
             © 2022 Peak Shift Ltd. + Contributors of BTC Payer, BTC Pay Server
             All rights reserved.
